[gd_scene load_steps=43 format=2]

[ext_resource path="res://Enemy/Dog4.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Dog3.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Dog2.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Dog5.png" type="Texture" id=4]
[ext_resource path="res://Enemy/Dog1.png" type="Texture" id=5]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=6]
[ext_resource path="res://Enemy/Dog_Slime.png" type="Texture" id=7]
[ext_resource path="res://Enemy/Dog_Boost.png" type="Texture" id=8]
[ext_resource path="res://Enemy/Dog_Sand.png" type="Texture" id=9]
[ext_resource path="res://Enemy/Dog_Fire.png" type="Texture" id=10]
[ext_resource path="res://Enemy/Dog_Oil.png" type="Texture" id=11]
[ext_resource path="res://Enemy/Dog_Ice.png" type="Texture" id=12]
[ext_resource path="res://Enemy/Dog6.png" type="Texture" id=14]
[ext_resource path="res://Enemy/Dog8.png" type="Texture" id=15]
[ext_resource path="res://Enemy/Dog7.png" type="Texture" id=16]
[ext_resource path="res://Enemy/Grandma3.png" type="Texture" id=17]
[ext_resource path="res://Enemy/Grandma1.png" type="Texture" id=18]
[ext_resource path="res://Enemy/Grandma2.png" type="Texture" id=19]
[ext_resource path="res://Enemy/Grandma4.png" type="Texture" id=20]
[ext_resource path="res://Enemy/Grandma5.png" type="Texture" id=21]
[ext_resource path="res://Enemy/Grandma6.png" type="Texture" id=22]
[ext_resource path="res://Enemy/Grandma_Boost.png" type="Texture" id=23]
[ext_resource path="res://Enemy/Grandma_Fire.png" type="Texture" id=24]
[ext_resource path="res://Enemy/Grandma_Oil.png" type="Texture" id=25]
[ext_resource path="res://Enemy/Grandma_Sand.png" type="Texture" id=26]
[ext_resource path="res://Enemy/Grandma_Slime.png" type="Texture" id=27]
[ext_resource path="res://Enemy/Grandma_Ice.png" type="Texture" id=28]
[ext_resource path="res://Enemy/Grandpa4.png" type="Texture" id=29]
[ext_resource path="res://Enemy/Grandpa5.png" type="Texture" id=30]
[ext_resource path="res://Enemy/Grandpa3.png" type="Texture" id=31]
[ext_resource path="res://Enemy/Grandpa_Fire.png" type="Texture" id=32]
[ext_resource path="res://Enemy/Grandpa6.png" type="Texture" id=33]
[ext_resource path="res://Enemy/Grandpa_Ice.png" type="Texture" id=34]
[ext_resource path="res://Enemy/Grandpa_Oil.png" type="Texture" id=35]
[ext_resource path="res://Enemy/Grandpa_Sand.png" type="Texture" id=36]
[ext_resource path="res://Enemy/Grandpa_Boost.png" type="Texture" id=37]
[ext_resource path="res://Enemy/Grandpa1.png" type="Texture" id=38]
[ext_resource path="res://Enemy/Grandpa2.png" type="Texture" id=39]
[ext_resource path="res://Enemy/Grandpa_Slime.png" type="Texture" id=40]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 10.0

[sub_resource type="CircleShape2D" id=2]
radius = 384.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Dog_Fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 20 ) ],
"loop": true,
"name": "Grandma_walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Dog_Sand",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "Grandpa_Oil",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "Grandpa_Fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Dog_Oil",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Dog_Ice",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Dog_Slime",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "Grandma_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "Grandma_Sand",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "Grandpa_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "Grandma_Oil",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "Grandpa_Sand",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": false,
"name": "Dog_death",
"speed": 16.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": false,
"name": "Grandma_death",
"speed": 16.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "Dog_walk",
"speed": 20.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Dog_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Dog_Boost",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "Grandpa_Boost",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "Grandma_Ice",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 30 ), ExtResource( 33 ) ],
"loop": false,
"name": "Grandpa_death",
"speed": 16.0
}, {
"frames": [ ExtResource( 40 ) ],
"loop": true,
"name": "Grandpa_Slime",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 31 ), ExtResource( 29 ) ],
"loop": true,
"name": "Grandpa_walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "Grandma_Slime",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "Grandpa_Ice",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "Grandma_Fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "Grandma_Boost",
"speed": 5.0
} ]

[node name="Enemy" type="RigidBody2D"]
collision_layer = 4
collision_mask = 2
mode = 2
contacts_reported = 5
contact_monitor = true
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 25 )
collision_mask = 5
collide_with_areas = true

[node name="SearchArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchArea"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
frames = SubResource( 3 )
animation = "Grandpa_Slime"
playing = true

[node name="Upgrade" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Upgrade" to="." method="_on_Upgrade_timeout"]
